src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBInstancedArrays_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBInstancedArrays_StringErrorContext.class */
public final class ARBInstancedArrays_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glVertexAttribDivisorARB(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBInstancedArraysErrorContext");
        methods.put("glVertexArrayVertexAttribDivisorEXT(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBInstancedArraysErrorContext");
        return methods;
    }
}
